Use java 16 list collector